--- a/Labs/Lab1/before/package.json
+++ b/Labs/Lab1/before/package.json
@@ -8,10 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0",
     "jquery": "~3.2.1",
     "popper.js": "^1.12.5",
-    "font-awesome": "^4.7.0",
     "reset.css": "^2.0.2"
   },
   "devDependencies": {
